--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
 <body>
   dont mind lil ol me ;)
- <a href="Peony/peony.html">peony</a>
+ <a href="Peony/peony.html">🌺</a>
  
- <a href="Sunflower/sunflower.html">peony</a>
+ <a href="Sunflower/sunflower.html">🌻</a>
  
- <a href="Rose/Rose.html">peony</a>
+ <a href="Rose/Rose.html">🌹</a>
  
- <a href="TigerLily/tigerlily.html">peony</a>
+ <a href="TigerLily/tigerlily.html">🪷</a>
  
- <a href="Tulip/tulip.html">peony</a>
+ <a href="Tulip/tulip.html">🌷</a>
 </body>
 
 
