--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
  <a href="Sunflower/sunflower.html">🌻</a>
  
- <a href="Rose/Rose.html">🌹</a>
+ <a href="Rose/rose.html">🌹</a>
  
  <a href="TigerLily/tigerlily.html">🪷</a>
  
