--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
 <body>
   dont mind lil ol me ;)
- <a href="Peony/peony.html">🌺</a>
+ <a href="Peony/peony.html" target="_blank">🌺</a>
  
- <a href="Sunflower/sunflower.html">🌻</a>
+ <a href="Sunflower/sunflower.html" target="_blank">🌻</a>
  
- <a href="Rose/rose.html">🌹</a>
+ <a href="Rose/rose.html" target="_blank">🌹</a>
  
- <a href="TigerLily/tigerlily.html">🪷</a>
+ <a href="TigerLily/tigerlily.html" target="_blank">🪷</a>
  
- <a href="Tulip/tulip.html">🌷</a>
+ <a href="Tulip/tulip.html" target="_blank">🌷</a>
 </body>
 
 
