--- a/Peony/peony.html
+++ b/Peony/peony.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML!>
 <html>
 
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
  <head><link rel="stylesheet" href="../flower.css"></head>
 
 
@@ -482,4 +485,5 @@ Powered by MediaWiki
 
 
   
+
 </html>
