--- a/Peony/peony.html
+++ b/Peony/peony.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML!>
 <html>
 
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+ <head>
+  <link rel="stylesheet" href="../flower.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
- <head><link rel="stylesheet" href="../flower.css"></head>
+ </head>
 
 
  <div class="flower">
@@ -487,3 +489,4 @@ Powered by MediaWiki
   
 
 </html>
+
