--- a/Sunflower/sunflower.html
+++ b/Sunflower/sunflower.html
@@ -1,7 +1,11 @@
 <!DOCTYPE HTML!>
 <html>
 
- <head><link rel="stylesheet" href="../flower.css"></head>
+ <head>
+  <link rel="stylesheet" href="../flower.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+ </head>
 
 
  <div class="flower">
@@ -426,4 +430,5 @@ Powered by MediaWiki
 
 
   
+
 </html>
