--- a/TigerLily/tigerlily.html
+++ b/TigerLily/tigerlily.html
@@ -1,7 +1,11 @@
 <!DOCTYPE HTML!>
 <html>
 
- <head><link rel="stylesheet" href="../flower.css"></head>
+ <head>
+  <link rel="stylesheet" href="../flower.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+ </head>
 
 
  <div class="flower">
@@ -1340,3 +1344,4 @@ Powered by MediaWiki
 
   
 </html>
+
