--- a/Tulip/tulip.html
+++ b/Tulip/tulip.html
@@ -1,7 +1,11 @@
 <!DOCTYPE HTML!>
 <html>
 
- <head><link rel="stylesheet" href="../flower.css"></head>
+ <head>
+  <link rel="stylesheet" href="../flower.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+ </head>
 
 
  <div class="flower">
@@ -474,4 +478,5 @@ Powered by MediaWiki
 
 
   
+
 </html>
