--- a/Peony/peony.html
+++ b/Peony/peony.html
@@ -4,7 +4,8 @@
 
  <head>
   <link rel="stylesheet" href="../flower.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
 
  </head>
 
@@ -489,4 +490,5 @@ Powered by MediaWiki
   
 
 </html>
+
 
