--- a/TigerLily/tigerlily.html
+++ b/TigerLily/tigerlily.html
@@ -3,8 +3,8 @@
 
  <head>
   <link rel="stylesheet" href="../flower.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
  </head>
 
 
@@ -1344,4 +1344,5 @@ Powered by MediaWiki
 
   
 </html>
+
 
