--- a/Tulip/tulip.html
+++ b/Tulip/tulip.html
@@ -3,8 +3,8 @@
 
  <head>
   <link rel="stylesheet" href="../flower.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
  </head>
 
 
@@ -480,3 +480,4 @@ Powered by MediaWiki
   
 
 </html>
+
